# dvc-tutorial

./: README.md  artifacts.json  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
artifacts/: .gitignore
src/: evaluate.py
